syntax = "proto3";

package audit;

message BlockTag {
  uint64 index = 1;
  bytes sigma = 2;
}

message FileTag {
  uint64 num_blocks = 1;
  uint64 num_sectors = 2;
  int32 sector_size = 3;
  bytes alphas = 4;
  bytes hmac_code = 5;
  bytes prf_key = 6;
}

message Challenge {
  int64 index = 1;
  bytes weight = 2;
}
